--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -137,3 +137,15 @@ h1 {
 .gap-1 {
   gap: 1rem;
 }
+
+.gap-05 {
+  gap: 0.5rem;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
