--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -121,6 +121,12 @@
 
 h1 {
   font-weight: 600;
+  font-size: 45px;
+}
+
+.base-title {
+  font-weight: 600;
+  color: rgb(39, 39, 39);
 }
 
 .flex {
